@@ -389,11 +389,27 @@ public class PredefMacros {
     }
 
     public static final Atom choose_macro(final TeXParser tp, final String[] args) throws ParseException {
+        return choose_brackets("lbrack", "rbrack", tp, args);
+    }
+
+    public static final Atom brack_macro(final TeXParser tp, final String[] args) throws ParseException {
+        return choose_brackets("lsqbrack", "rsqbrack", tp, args);
+    }
+    
+    public static final Atom bangle_macro(final TeXParser tp, final String[] args) throws ParseException {
+        return choose_brackets("langle", "rangle", tp, args);
+    }
+    
+    public static final Atom brace_macro(final TeXParser tp, final String[] args) throws ParseException {
+        return choose_brackets("lbrace", "rbrace", tp, args);
+    }
+
+    public static final Atom choose_brackets(final String left, final String right, final TeXParser tp, final String[] args) throws ParseException {
         Atom num = tp.getFormulaAtom();
         Atom denom = new TeXFormula(tp, tp.getOverArgument(), false).root;
         if (num == null || denom == null)
             throw new ParseException("Both numerator and denominator of choose can't be empty!");
-        return new FencedAtom(new FractionAtom(num, denom, false), new SymbolAtom("lbrack", TeXConstants.TYPE_OPENING, true), new SymbolAtom("rbrack", TeXConstants.TYPE_CLOSING, true));
+        return new FencedAtom(new FractionAtom(num, denom, false), new SymbolAtom(left, TeXConstants.TYPE_OPENING, true), new SymbolAtom(right, TeXConstants.TYPE_CLOSING, true));
     }
 
     public static final Atom binom_macro(final TeXParser tp, final String[] args) throws ParseException {
